syntax = "proto3";
package emissions.v1;

option go_package = "github.com/allora-network/allora-chain/x/emissions/migrations/v2/types";

import "gogoproto/gogo.proto";

message Nonce {
  option (gogoproto.equal) = true;
  int64 block_height = 1;  // block height of the request
}

message Nonces {
  repeated Nonce nonces = 1;
}

message ReputerRequestNonce {
  option (gogoproto.equal) = true;
  // the reputers should respond to the reputer request with losses for work
  // found at this worker nonce
  Nonce reputer_nonce = 1;
}

message ReputerRequestNonces {
  repeated ReputerRequestNonce nonces = 1;
}
